commit only after message processed in all consumers